# ecommerce

./: Dockerfile.api  Dockerfile.web  docker-compose.yml
api/: Makefile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
api/ecommerce/: __init__.py
api/ecommerce/category/: __init__.py  app.py  repository.py  web.py
api/ecommerce/company/: __init__.py  repository.py
api/ecommerce/database/: database.py
api/ecommerce/product/: __init__.py  app.py  repository.py  web.py
api/ecommerce/product_category/: __init__.py  repository.py
api/ecommerce/user/: __init__.py  app.py  repository.py  web.py
api/migrations/: env.py
api/migrations/versions/: 4f515556ca06_create_companies_table.py  56816c5f4b29_create_account_table.py  60f93139e0e6_create_products_table.py  65ce6f2cf789_change_product_categories_mapping.py  84da36fd7287_add_unique_constraint_to_categories_name.py  983c33a64974_change_price_to_integer.py  a80843ab5401_create_users_table.py  b9aed1499960_test.py  f51d835db149_create_categories_table.py  f6d8d965df34_create_users_table.py  f7dd0de0429e_add_more_columns_to_products_table.py  fc7976aae129_create_product_categories_table.py
api/tests/: conftest.py
api/tests/categories/: category_repository_test.py  category_routes_test.py  category_service_test.py
api/tests/companies/: company_repository_test.py
api/tests/product_categories/: product_categories_repository_test.py
api/tests/products/: product_repository_test.py  product_routes_test.py  product_service_test.py
api/tests/users/: user_repository_test.py  (+2 more)
web/: biome.json  (+3 more)
(+35 files in other folders)
